--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "css": "npx @tailwindcss/cli -i ./src/styles/main.css -o ./public/css/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,9 +14,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@phosphor-icons/web": "^2.1.2",
+    "@tailwindcss/cli": "^4.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.17.1",
+    "tailwindcss": "^4.2.1",
     "xendit-node": "^7.0.0"
   },
   "devDependencies": {
