--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.3",
+    "@getbrevo/brevo": "^4.0.1",
     "@phosphor-icons/web": "^2.1.2",
     "@tailwindcss/cli": "^4.2.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
+    "node-cron": "^4.2.1",
     "pg": "^8.17.1",
+    "qrcode": "^1.5.4",
     "tailwindcss": "^4.2.1",
     "xendit-node": "^7.0.0"
   },
