--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/cli": "^4.2.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
